# cobolagentv2

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  cli.md  migration.md  sdk.md
examples/: sdk_usage.py
src/cobol_agent/: __init__.py  agents.py  cli.py  commands.py  config.py  errors.py  events.py  facade.py  models.py  parser.py  providers.py  renderers.py  workflows.py  workspace.py
tests/: test_cli.py  test_config.py  test_parser_workspace.py  test_sdk_workflows.py
tests/fixtures/sample_cobol/: CUSTOMER.cbl  CUSTREC.cpy
